--- a/TechHive.Korobeynikov.TestApp.Sqlite/TechHive.Korobeynikov.TestApp.Sqlite.csproj
+++ b/TechHive.Korobeynikov.TestApp.Sqlite/TechHive.Korobeynikov.TestApp.Sqlite.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\TechHive.Korobeynikov.TestApp.Models\TechHive.Korobeynikov.TestApp.Models.csproj" />
+    <ProjectReference Include="..\TechHive.Korobeynikov.TestApp.Models\TechHive.Korobeynikov.TestApp.Models.csproj" />
   </ItemGroup>
 
 </Project>
