--- a/TechHive.Korobeynikov.TestApp.Console/TechHive.Korobeynikov.TestApp.Console.csproj
+++ b/TechHive.Korobeynikov.TestApp.Console/TechHive.Korobeynikov.TestApp.Console.csproj
@@ -1,17 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
     <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00972" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TechHive.Korobeynikov.TestApp.Infrastructure\TechHive.Korobeynikov.TestApp.Infrastructure.csproj" />
     <ProjectReference Include="..\TechHive.Korobeynikov.TestApp.Models\TechHive.Korobeynikov.TestApp.Models.csproj" />
   </ItemGroup>
 
