--- a/TechHive.Korobeynikov.TestApp.Infrastructure/TechHive.Korobeynikov.TestApp.Infrastructure.csproj
+++ b/TechHive.Korobeynikov.TestApp.Infrastructure/TechHive.Korobeynikov.TestApp.Infrastructure.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.34" />
     <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
+    <PackageReference Include="System.Text.Json" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TechHive.Korobeynikov.TestApp.BL\TechHive.Korobeynikov.TestApp.BL.csproj" />
     <ProjectReference Include="..\TechHive.Korobeynikov.TestApp.Models\TechHive.Korobeynikov.TestApp.Models.csproj" />
   </ItemGroup>
 
